syntax = "proto3";

package user;
option go_package = "./user";

message RegisterRequest {
  string username = 1;
  string password = 2;
  string realName = 3;
  string phone = 4;
  string email = 5;
}

message RegisterResponse {
  bool success = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message LogoutRequest {
  string token = 1;
  string username = 2;
}

message LogoutResponse {
  bool success = 1;
}

message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  string id = 1;
  string username = 2;
  string realName = 3;
  string phone = 4;
  string email = 5;
}

message IsExistUserRequest{
  string username = 1;
}

message IsExistUserResponse{
  bool success = 1;
}

message isUserLoginRequest{
  string token = 1;
}

message isUserLoginResponse{
  bool success = 1;
}


service User {
  rpc Register(RegisterRequest) returns(RegisterResponse);
  rpc Login(LoginRequest) returns(LoginResponse);
  rpc Logout(LogoutRequest) returns(LogoutResponse);
  rpc GetUserByUsername(GetUserRequest) returns(GetUserResponse);
  rpc IsExistUser(IsExistUserRequest) returns(IsExistUserResponse);
  rpc IsUserLogin(isUserLoginRequest) returns(isUserLoginResponse);
}
